
2007-12-09 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/precision/SimpleGeometryPrecisionReducerTest.cpp:
	  test suite for class geos::precision::SimpleGeometryPrecisionReducer

2007-11-26 Mateusz Loskot <mateusz@loskot.net>

	* source\Makefile.vc: enabled target copying version.h.vc
	  and geos_c.h.vc to headers used by Visual C++ 
	  source\headers\geos\version.h.vc: added test if used
	  with Visual C++ compiler
	* build\msvc80\geos.vsprops,
	* build\msvc80\geos_python\geos_python.vcproj,
	* build\msvc80\geos_ruby\geos_ruby.vcproj: added common 
	  Property Sheet for Visual C++ projects where Python and 
	  Ruby macros/locations are defined.
	* swig\python\geos_wrap.cxx: Fixed include of Python.h,
	  see Ticket #164 for details.

2007-11-22 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/io/WKBWriter.h: added purifying cast of 
	  int value to bool.

2007-06-11 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/operation/IsSimpleOpTest.cpp,
	  tests/unit/Makefile.am: Added test for IsSimpleOp class.
	* source/operation/IsSimpleOp.cpp: Replaced post-increment
	  operators with pre-increment operators where standard
	  iterators are incremented in loops. NOTE: Prefer pre-incr.
	  over post-inc. when working with standard iterators.

2007-06-10 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/utility.h: Added custom operators for static and
	  dynamic casts of pointers wrapped with std::auto_ptr<T> type.
	* tests/unit/algorithm/ConvexHullTest.cpp: Added unit test for
	  geos::algorithm::ConvexHull.
	* tests/unit/algorithm/CGAlgorithms/isCCWTest.cpp: Added unit test for
	  geos::algorithm::CGAlgorithms::isCCW() function.
	* tests/unit/algorithm/CGAlgorithms/computeOrientationTest.cpp: Added unit
	  test for geos::algorithm::CGAlgorithms::computeOrientation() function.
	* tests/unit/Makefile.am: Added files with new tests.

2007-06-08 Mateusz Loskot <mateusz@loskot.net>

	* capi/geos_c.h.in: Applied Konstantin Baumann's suggestion